--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sequelize-paper-trail",
+	"name": "sequelize_paper_trail",
 	"version": "0.0.1",
 	"description": "Track changes to your Sequelize models data",
 	"author": {
