--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
 		"release": "release-it",
 		"test": "jest"
 	},
+	"dependencies": {
+		"continuation-local-storage": "^3.2.1",
+		"lodash": "^4.17.21",
+		"sequelize": "^6.9.0",
+		"sqlite3": "^5.0.2"
+	},
 	"devDependencies": {
 		"@babel/cli": "^7.16.0",
 		"@babel/core": "^7.16.0",
@@ -63,15 +69,7 @@
 		"jest": "^27.3.1",
 		"prettier": "^2.4.1",
 		"pretty-error": "^4.0.0",
-		"release-it": "^14.11.6",
-		"sequelize": "^6.9.0",
-		"sqlite3": "^5.0.2"
-	},
-	"dependencies": {
-		"continuation-local-storage": "^3.2.1",
-		"deep-diff": "^1.0.2",
-		"diff": "^5.0.0",
-		"lodash": "^4.17.21"
+		"release-it": "^14.11.6"
 	},
 	"babel": {
 		"presets": [
